--- a/style.css
+++ b/style.css
@@ -138,7 +138,16 @@ input[type="number"] {
     margin-left: 8px;
     width: 60px;
 }
-
+footer {
+    text-align: center;
+    padding: 0.3rem 0;
+    width : 30%;
+    margin-left: 35.5%;
+    background: #646161;
+    color: #fff;
+    font-size: 0.9rem;
+    border-radius: 10px 10px 10px 10px;
+}   
 @media (max-width: 480px) {
     .container {
         margin: 2rem auto;
